[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/camera.gd" type="Script" id=1]
[ext_resource path="res://font/Madjoe.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/button.wav" type="AudioStream" id=3]
[ext_resource path="res://font/shlop rg.ttf" type="DynamicFontData" id=4]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform bool apply = true;
uniform float amount = 1.0;
uniform sampler2D offset_texture : hint_white;

void fragment() {
	vec4 texture_color = texture(TEXTURE, UV);
	vec4 color = texture_color;
	
	if (apply == true) {
		float adjusted_amount = amount * texture(offset_texture, UV).r / 100.0;
		color.r = texture(TEXTURE, vec2(UV.x + adjusted_amount, UV.y)).r;
		color.g = texture(TEXTURE, UV).g;
		color.b = texture(TEXTURE, vec2(UV.x - adjusted_amount, UV.y)).b;
	}
	COLOR = color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/apply = true
shader_param/amount = 5.0

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_intensity = 0.1
glow_strength = 0.9
glow_bloom = 0.15
glow_blend_mode = 1

[sub_resource type="DynamicFont" id=9]
size = 65
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 44
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 6
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D displace : hint_albedo;
uniform float dispAmt: hint_range(0,0.1);
uniform float abberationAmtX: hint_range(0,0.1);
uniform float abberationAmtY: hint_range(0,0.1);
uniform float dispSize: hint_range(0.1, 2.0);
uniform float maxAlpha : hint_range(0.1,1.0);

void fragment()
{
	//displace effect
	vec4 disp = texture(displace, SCREEN_UV * dispSize);
	vec2 newUV = SCREEN_UV + disp.xy * dispAmt;
	//abberation
	COLOR.r = texture(SCREEN_TEXTURE, newUV - vec2(abberationAmtX,abberationAmtY)).r; 
	COLOR.g = texture(SCREEN_TEXTURE, newUV).g; 
	COLOR.b = texture(SCREEN_TEXTURE, newUV + vec2(abberationAmtX,abberationAmtY)).b;
	COLOR.a = texture(SCREEN_TEXTURE, newUV).a * maxAlpha;
	}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/dispAmt = 0.001
shader_param/abberationAmtX = 0.002
shader_param/abberationAmtY = 0.0
shader_param/dispSize = 0.1
shader_param/maxAlpha = 0.5

[node name="camera" type="Camera2D"]
light_mask = 0
material = SubResource( 7 )
z_index = 100
current = true
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="CenterContainer" type="CenterContainer" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Died" type="Control" parent="CenterContainer"]
pause_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Died"]
light_mask = 0
margin_left = -2054.0
margin_top = -1464.0
margin_right = 2222.0
margin_bottom = 1383.0
mouse_filter = 2
color = Color( 0.168627, 0.105882, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Died"]
light_mask = 0
margin_left = -208.265
margin_top = -161.817
margin_right = 221.735
margin_bottom = -82.8172
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.984314, 0, 0, 1 )
text = "you were exorcised"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CenterContainer/Died"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -91.1815
margin_top = -58.6651
margin_right = 90.8185
margin_bottom = 0.3349
custom_fonts/font = SubResource( 10 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CenterContainer/Died"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -91.1815
margin_top = 33.4335
margin_right = 90.8185
margin_bottom = 92.4335
custom_fonts/font = SubResource( 10 )
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CenterContainer/Died"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -91.1815
margin_top = 119.851
margin_right = 90.8185
margin_bottom = 178.851
custom_fonts/font = SubResource( 10 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterContainer/Died"]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.5

[node name="Pause" type="Control" parent="CenterContainer"]
pause_mode = 2
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Pause"]
light_mask = 0
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 251.0
color = Color( 0.168627, 0.105882, 0.105882, 0.964706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer/Pause"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -90.2906
margin_top = -148.241
margin_right = 91.7094
margin_bottom = -89.241
custom_fonts/font = SubResource( 10 )
text = "resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CenterContainer/Pause"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -91.1815
margin_top = -58.6651
margin_right = 90.8185
margin_bottom = 0.3349
custom_fonts/font = SubResource( 10 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CenterContainer/Pause"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -91.1815
margin_top = 33.4335
margin_right = 90.8185
margin_bottom = 92.4335
custom_fonts/font = SubResource( 10 )
text = "menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CenterContainer/Pause"]
modulate = Color( 0.878431, 0.372549, 0.372549, 1 )
light_mask = 0
margin_left = -91.1815
margin_top = 119.851
margin_right = 90.8185
margin_bottom = 178.851
custom_fonts/font = SubResource( 10 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="CenterContainer/Pause"]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 0.5

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 0
material = SubResource( 5 )
margin_left = -2636.0
margin_top = -2162.0
margin_right = 2925.0
margin_bottom = 2516.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="CenterContainer/Died/Button2" to="." method="_on_Button2_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Died/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="button_up" from="CenterContainer/Died/Button3" to="." method="_on_Button3_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Died/Button3" to="." method="_on_Button3_mouse_entered"]
[connection signal="button_up" from="CenterContainer/Died/Button4" to="." method="_on_Button4_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Died/Button4" to="." method="_on_Button4_mouse_entered"]
[connection signal="button_up" from="CenterContainer/Pause/Button" to="." method="_on_Button_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Pause/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="button_up" from="CenterContainer/Pause/Button2" to="." method="_on_Button2_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Pause/Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="button_up" from="CenterContainer/Pause/Button3" to="." method="_on_Button3_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Pause/Button3" to="." method="_on_Button3_mouse_entered"]
[connection signal="button_up" from="CenterContainer/Pause/Button4" to="." method="_on_Button4_button_up"]
[connection signal="mouse_entered" from="CenterContainer/Pause/Button4" to="." method="_on_Button4_mouse_entered"]
